# VerifyVAT-Global-Identity

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VerifyVat Python CLI Architecture.md  debug-infer-type-429.md  pyproject.toml
.github/workflows/: ci.yml
.trae/documents/: verifyvat-cli-skeleton-implementation-plan.md
docs/: ARCHITECTURE.md  DESIGN.md  GETTING_STARTED_GUIDE.md  IMPLEMENTATION_PLAN.md  PRD.md  PROMPT.md  README.md  REFINEMENT_ROADMAP.md  SPECS.md  research.md
fixtures/: sample_bulk_input.csv
scripts/: check_docs_alignment.py  smoke_test.sh
src/verifyvat_cli/: __init__.py  core.py  db.py  main.py
src/verifyvat_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_db.py  test_main.py
